Added virtual environment

--- a/posts/references.bib
+++ b/posts/references.bib
@@ -40,3 +40,44 @@
   year={2019},
   publisher={Wellesley-Cambridge Press Cambridge}
 }
+
+@inproceedings{pedregosa2016hyperparameter,
+  title={Hyperparameter optimization with approximate gradient},
+  author={Pedregosa, Fabian},
+  booktitle={International conference on machine learning},
+  pages={737--746},
+  year={2016},
+  organization={PMLR}
+}
+
+@article{mlodozeniec2023hyperparameter,
+  title={Hyperparameter Optimization through Neural Network Partitioning},
+  author={Mlodozeniec, Bruno and Reisser, Matthias and Louizos, Christos},
+  journal={arXiv preprint arXiv:2304.14766},
+  year={2023}
+}
+
+@inproceedings{lorraine2020optimizing,
+  title={Optimizing millions of hyperparameters by implicit differentiation},
+  author={Lorraine, Jonathan and Vicol, Paul and Duvenaud, David},
+  booktitle={International conference on artificial intelligence and statistics},
+  pages={1540--1552},
+  year={2020},
+  organization={PMLR}
+}
+
+@inproceedings{maclaurin2015gradient,
+  title={Gradient-based hyperparameter optimization through reversible learning},
+  author={Maclaurin, Dougal and Duvenaud, David and Adams, Ryan},
+  booktitle={International conference on machine learning},
+  pages={2113--2122},
+  year={2015},
+  organization={PMLR}
+}
+
+@article{sagun2016eigenvalues,
+  title={Eigenvalues of the hessian in deep learning: Singularity and beyond},
+  author={Sagun, Levent and Bottou, Leon and LeCun, Yann},
+  journal={arXiv preprint arXiv:1611.07476},
+  year={2016}
+}
