Turned off post

--- a/posts/ho/index.qmd
+++ b/posts/ho/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Hyperparameter Optimization"
+draft: false
 categories:
   - machine learning
 bibliography: /Users/macbookair/Documents/quarto-website/posts/references.bib
