Added draft of cross-validation post

--- a/posts/references.bib
+++ b/posts/references.bib
@@ -1,8 +1,49 @@
+@article{church2021emerging,
+  title={Emerging trends: A gentle introduction to fine-tuning},
+  author={Church, Kenneth Ward and Chen, Zeyu and Ma, Yanjun},
+  journal={Natural Language Engineering},
+  volume={27},
+  number={6},
+  pages={763--778},
+  year={2021},
+  publisher={Cambridge University Press}
+}
+
+@article{devlin2018bert,
+  title={Bert: Pre-training of deep bidirectional transformers for language understanding},
+  author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  journal={arXiv preprint arXiv:1810.04805},
+  year={2018}
+}
+
+@article{ghojogh2019theory,
+  title={The theory behind overfitting, cross validation, regularization, bagging, and boosting: tutorial},
+  author={Ghojogh, Benyamin and Crowley, Mark},
+  journal={arXiv preprint arXiv:1905.12787},
+  year={2019}
+}
+
 @book{hagan2014neural,
   title={Neural network design},
   author={Hagan, Martin T and Demuth, Howard B and Beale, Mark},
   year={2014},
   publisher={PWS Publishing Co.}
+}
+
+@book{harrell2001regression,
+  title={Regression modeling strategies: with applications to linear models, logistic regression, and survival analysis},
+  author={Harrell, Frank E and others},
+  volume={608},
+  year={2001},
+  publisher={Springer}
+}
+
+@book{hastie2009elements,
+  title={The elements of statistical learning: data mining, inference, and prediction},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome H and Friedman, Jerome H},
+  volume={2},
+  year={2009},
+  publisher={Springer}
 }
 
 @book{goodfellow2016deep,
@@ -81,3 +122,13 @@
   journal={arXiv preprint arXiv:1611.07476},
   year={2016}
 }
+
+@article{wei2021pretrained,
+  title={Why do pretrained language models help in downstream tasks? an analysis of head and prompt tuning},
+  author={Wei, Colin and Xie, Sang Michael and Ma, Tengyu},
+  journal={Advances in Neural Information Processing Systems},
+  volume={34},
+  pages={16158--16170},
+  year={2021}
+}
+
